# bedtime-stories

./: README.md  pyproject.toml
src/bedtime_stories/: __init__.py  cli.py
src/bedtime_stories/openai/: openai_adapter.py
src/bedtime_stories/tts/: edge_tts.py
